--- a/package.json
+++ b/package.json
@@ -1,41 +1,40 @@
 {
   "name": "frontend",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.16.3",
     "@mantine/core": "^7.16.3",
+    "@mantine/dates": "^7.16.3",
+    "@mantine/form": "^7.16.3",
     "@mantine/hooks": "^7.16.3",
-    "@tailwindcss/postcss": "^4.0.6",
-    "init": "^0.1.2",
+    "@mantine/notifications": "^7.16.3",
+    "@tabler/icons-react": "^3.30.0",
+    "@tanstack/react-query": "^5.66.3",
+    "axios": "^1.7.9",
+    "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5",
-    "tailwindcss": "^4.0.6"
+    "react-hot-toast": "^2.5.2",
+    "recoil": "^0.7.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@types/react": "^19.0.8",
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20.17.19",
+    "@types/react": "^19.0.9",
     "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.7",
     "postcss": "^8.5.2",
-    "postcss-preset-mantine": "^1.17.0",
-    "postcss-simple-vars": "^7.0.1",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
-  },
-  "eslintConfig": {
-    "extends": []
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
   }
 }
