--- a/package.json
+++ b/package.json
@@ -13,24 +13,32 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
     "@mantine/carousel": "^7.16.3",
+    "@mantine/charts": "^7.17.0",
     "@mantine/core": "^7.16.3",
     "@mantine/dates": "^7.16.3",
     "@mantine/form": "^7.16.3",
     "@mantine/hooks": "^7.16.3",
     "@mantine/notifications": "^7.16.3",
+    "@mantine/styles": "^6.0.22",
+    "@next/font": "^14.2.15",
     "@tabler/icons-react": "^3.30.0",
     "@tanstack/react-query": "^5.66.3",
     "ajv": "8.12.0",
     "ajv-keywords": "5.1.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "recharts": "^2.15.1",
     "recoil": "^0.7.7",
     "tailwind-merge": "^3.0.1",
+    "tailwind-scrollbar": "^4.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
