--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "lint": "next lint"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -42,15 +40,14 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.4",
     "@eslint/eslintrc": "^3",
-    "@storybook/addon-essentials": "^8.5.6",
-    "@storybook/addon-interactions": "^8.5.6",
-    "@storybook/addon-onboarding": "^8.5.6",
-    "@storybook/blocks": "^8.5.6",
-    "@storybook/nextjs": "^8.5.6",
-    "@storybook/react": "^8.5.6",
-    "@storybook/test": "^8.5.6",
+    "@storybook/addon-essentials": "^8.5.8",
+    "@storybook/addon-interactions": "^8.5.8",
+    "@storybook/addon-onboarding": "^8.5.8",
+    "@storybook/blocks": "^8.5.8",
+    "@storybook/nextjs": "^8.5.8",
+    "@storybook/react": "^8.5.8",
+    "@storybook/test": "^8.5.8",
     "@types/node": "^20.17.19",
     "@types/react": "^19.0.9",
     "@types/react-dom": "^19.0.3",
@@ -59,7 +56,6 @@
     "eslint-config-next": "15.1.7",
     "eslint-plugin-storybook": "^0.11.3",
     "postcss": "^8.5.2",
-    "storybook": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   },
