--- a/package.json
+++ b/package.json
@@ -9,59 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@emotion/cache": "^11.14.0",
-    "@emotion/react": "^11.14.0",
-    "@mantine/carousel": "^7.16.3",
-    "@mantine/charts": "^7.17.0",
-    "@mantine/core": "^7.16.3",
-    "@mantine/dates": "^7.16.3",
-    "@mantine/form": "^7.16.3",
-    "@mantine/hooks": "^7.16.3",
-    "@mantine/notifications": "^7.16.3",
-    "@mantine/styles": "^6.0.22",
-    "@next/font": "^14.2.15",
-    "@tabler/icons-react": "^3.30.0",
-    "@tanstack/react-query": "^5.66.3",
-    "ajv": "8.12.0",
-    "ajv-keywords": "5.1.0",
-    "axios": "^1.7.9",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.475.0",
-    "next": "15.1.7",
+    "@clerk/nextjs": "^6.12.4",
+    "next": "15.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.2",
-    "recharts": "^2.15.1",
-    "recoil": "^0.7.7",
-    "tailwind-merge": "^3.0.1",
-    "tailwind-scrollbar": "^4.0.0",
-    "zod": "^3.24.2"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@storybook/addon-essentials": "^8.5.8",
-    "@storybook/addon-interactions": "^8.5.8",
-    "@storybook/addon-onboarding": "^8.5.8",
-    "@storybook/blocks": "^8.5.8",
-    "@storybook/nextjs": "^8.5.8",
-    "@storybook/react": "^8.5.8",
-    "@storybook/test": "^8.5.8",
-    "@types/node": "^20.17.19",
-    "@types/react": "^19.0.9",
-    "@types/react-dom": "^19.0.3",
-    "autoprefixer": "^10.4.20",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "eslint-plugin-storybook": "^0.11.3",
-    "postcss": "^8.5.2",
-    "tailwindcss": "^3.4.17",
+    "eslint-config-next": "15.2.1",
+    "tailwindcss": "^4",
     "typescript": "^5"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
   }
 }
