--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.71.5",
     "@types/react-router-dom": "^5.3.3",
