--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.487.0",
+    "motion": "^12.9.2",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
