--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.487.0",
     "motion": "^12.9.2",
-    "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-day-picker": "^9.6.7",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
+    "rollup-plugin-visualizer": "^5.14.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.3",
