--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "@types/react-router-dom": "^5.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "3.3.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.487.0",
     "motion": "^12.9.2",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
